# Miniprojekt_Subway_Surfers

./: CMakeLists.txt  Miniprojekt_Subway_Surfers.sln
Miniprojekt_Subway_Surfers/: ColorPalette.c  ColorPalette.h  Miniprojekt_Subway_Surfers.vcxproj  Miniprojekt_Subway_Surfers.vcxproj.filters  constants.h  constrants.c  gameFunctions.c  gameFunctions.h  main.c
