cmake_minimum_required(VERSION 3.26)
project(Miniprojekt_Subway_Surfers C)

set(CMAKE_C_STANDARD 11)

include_directories(Miniprojekt_Subway_Surfers-dynamische-gr-e/Miniprojekt_Subway_Surfers)

add_executable(Miniprojekt_Subway_Surfers
        Miniprojekt_Subway_Surfers/Miniprojekt_Subway_Surfers/ColorPalette.c
        Miniprojekt_Subway_Surfers/Miniprojekt_Subway_Surfers/ColorPalette.c
        Miniprojekt_Subway_Surfers/Miniprojekt_Subway_Surfers/ColorPalette.h
        Miniprojekt_Subway_Surfers/Miniprojekt_Subway_Surfers/constants.h
        Miniprojekt_Subway_Surfers/Miniprojekt_Subway_Surfers/constants.c
        Miniprojekt_Subway_Surfers/Miniprojekt_Subway_Surfers/gameFunctions.c
        Miniprojekt_Subway_Surfers/Miniprojekt_Subway_Surfers/gameFunctions.h
        Miniprojekt_Subway_Surfers/Miniprojekt_Subway_Surfers/main.c)
